--- a/MenuBasico/index.html
+++ b/MenuBasico/index.html
@@ -18,7 +18,10 @@
         </li>
     </nav>
     <main>
-        
+        <div>
+            
+        </div>
+        <p></p>
     </main>
 </body>
 </html>
