Criação do formulario

--- a/MenuBasico/contato.html
+++ b/MenuBasico/contato.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&display=swap" rel="stylesheet">   
     <title>Menu Padrão</title>
 </head>
 <body>
@@ -17,7 +20,14 @@
             <ul><a href="">Sobre</a></ul>
         </li>
     </nav>
-    <main>
-    </main>
 </body>
+    <main>
+        <form action="">
+            <fieldset>
+                <legend>Nós contate via e-mail</legend>
+                <p>Digite seu nome:<input type="text" name="nome" id="" placeholder="NOME"></p>
+                <p>Digite seu e-mail:<input type="email" name="nome" id="" placeholder="E-Mail"></p>
+            </fieldset>
+        </form>
+    </main>
 </html>
