--- a/MenuBasico/contato.html
+++ b/MenuBasico/contato.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&display=swap" rel="stylesheet">   
-    <title>Menu Padrão</title>
+    <title>Luck the Friend</title>
 </head>
 <body>
     <nav class="menu">
