--- a/MenuBasico/contato.html
+++ b/MenuBasico/contato.html
@@ -27,7 +27,9 @@
                 <legend>Nós contate via e-mail</legend>
                 <p>Digite seu nome:<input type="text" name="nome" id="" placeholder="NOME"></p>
                 <p>Digite seu e-mail:<input type="email" name="nome" id="" placeholder="E-Mail"></p>
-                <p>Sua mensagem:<input type="text" name="reclamação" id="recalmacao" placeholder="Reclamações, sugestões, dicas e etc"></p>
+                <p>Sua mensagem:<input type="text" name="reclamação" id="reclamacao" ></p>
+                <p><input type="file" name="imgs" id="files"></p>
+                <input type="submit" value="Enviar">
             </fieldset>
         </form>
     </main>
