--- a/Projetos/LaddingPage/index.html
+++ b/Projetos/LaddingPage/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Danki Code</title>
 </head>
 <body>
@@ -20,7 +23,17 @@
             <div class="centro">
                 <div class="form">
                     <form action="">
-                    
+                        <h2>Preencha o formulario para nos contatar!</h2>
+                        <div class="inputs">
+                            <span>Nome*</span>
+                            <input type="text" name="nome" id="nome" required>
+                            <span>Email*</span>
+                            <input type="email" name="email" id="email" required>
+                            <span>Telefone*</span>
+                            <input type="text" name="telefone" id="tell" required min="14" max="14">
+                            <span>* Campos Obrigatorios</span>
+                            <input type="submit" value="Enviar">
+                        </div>
                     </form>
                 </div>
             </div>
