--- a/Projetos/LaddingPage/index.html
+++ b/Projetos/LaddingPage/index.html
@@ -46,6 +46,13 @@
                     </div>
                 </div>
             </div>
-        </div>        
+        </div> 
+        <div class="container">
+            <div class="centro">
+                <h2>Hi</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, non quo? Beatae iusto necessitatibus alias aperiam? Itaque natus consequuntur deserunt aliquam labore doloribus facilis provident, magnam fugit! Soluta, aliquid necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nihil nostrum voluptates cum, optio atque sapiente hic, delectus ad impedit enim. At architecto deleniti ex numquam, nisi ea dignissimos ipsam.</p>
+            </div>
+
+        </div>       
 </body>
 </html>
